fixing overflows and looks

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,8 +5,8 @@ html {
 }
 .App {
   text-align: center;
-  height: 100vh;
   font-family: 'Lato';
+  overflow-x: hidden;
 }
 
 .App-logo {
