--- a/src/pages/Home/WhyUs/WhyUsSection.scss
+++ b/src/pages/Home/WhyUs/WhyUsSection.scss
@@ -38,7 +38,7 @@
     }
 
     span {
-      font-size: 1.5rem !important;
+      font-size: 2rem !important;
     }
   }
   @media screen and (min-width: 280px) and (max-width: 760px) {
